[gd_scene load_steps=13 format=3 uid="uid://iwbwhwuxn8lb"]

[ext_resource type="Texture2D" uid="uid://dtjwy5q65h31f" path="res://download (4).png" id="1_gr470"]
[ext_resource type="Script" uid="uid://c8t07lw3jcd38" path="res://scripts/equipment_unlock.gd" id="1_s4h7e"]
[ext_resource type="Texture2D" uid="uid://ygy1vcvwcn6n" path="res://orig.png" id="2_gr470"]
[ext_resource type="ButtonGroup" uid="uid://d0njoxle0v3fw" path="res://scenes/unlocking.tres" id="2_n1c0v"]
[ext_resource type="Texture2D" uid="uid://cxr4hmu5euv62" path="res://New Piskel (6).png" id="3_0a6ek"]
[ext_resource type="Texture2D" uid="uid://cmyylv0uaj23t" path="res://new sprites/final sprites/sun_idol.png" id="4_f3uhr"]
[ext_resource type="Texture2D" uid="uid://4ech8q14l61l" path="res://new sprites/final sprites/moon_idol.png" id="5_stw0d"]
[ext_resource type="Texture2D" uid="uid://bhn6vcq0cuvq4" path="res://new sprites/final sprites/warm_gloves.png" id="7_wp3o5"]
[ext_resource type="Texture2D" uid="uid://dgtlv12i7qg0" path="res://new sprites/final sprites/sturdy_gloves.png" id="8_ua4ia"]
[ext_resource type="Texture2D" uid="uid://bq4dlljvt2orl" path="res://new sprites/final sprites/warm_boots.png" id="10_kjk1s"]
[ext_resource type="Texture2D" uid="uid://bic11tjs1jb2b" path="res://new sprites/final sprites/spiky_boots(5).png" id="11_3rw7u"]
[ext_resource type="Texture2D" uid="uid://d0ul4krsqbf38" path="res://new sprites/ui/download (4).png" id="12_v0o07"]

[node name="equipment_unlock" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_s4h7e")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(568, 280)
scale = Vector2(2.20408, 1.78031)
texture = ExtResource("2_gr470")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
scale = Vector2(1.64, 1)

[node name="SunIdol" type="Button" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 256.0
toggle_mode = true
button_group = ExtResource("2_n1c0v")

[node name="Highlight" type="Sprite2D" parent="SunIdol"]
position = Vector2(64, 64)
scale = Vector2(3.5, 3.5)
texture = ExtResource("3_0a6ek")

[node name="Label" type="Label" parent="SunIdol/Highlight"]
offset_left = -27.4286
offset_top = 18.2857
offset_right = 266.571
offset_bottom = 67.2857
scale = Vector2(0.208168, 0.256987)
text = "                     Sun Idol: 
     Campfires give more warmth"

[node name="Sprite2D" type="Sprite2D" parent="SunIdol"]
position = Vector2(64, 64)
texture = ExtResource("4_f3uhr")

[node name="MoonIdol" type="Button" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 256.0
toggle_mode = true
button_group = ExtResource("2_n1c0v")

[node name="Highlight" type="Sprite2D" parent="MoonIdol"]
position = Vector2(64, 64)
scale = Vector2(3.5, 3.5)
texture = ExtResource("3_0a6ek")

[node name="Label" type="Label" parent="MoonIdol/Highlight"]
offset_left = -27.4286
offset_top = 18.2857
offset_right = 283.571
offset_bottom = 119.286
scale = Vector2(0.208168, 0.256987)
text = "                     Moon Idol: 
   First 25 steps cost no warmth. 
   After that this effect has a very 
         low chance to reactivate 
                      for 3 steps."

[node name="Sprite2D" type="Sprite2D" parent="MoonIdol"]
position = Vector2(64, 64)
texture = ExtResource("5_stw0d")

[node name="WarmGloves" type="Button" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = 128.0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 256.0
toggle_mode = true
button_group = ExtResource("2_n1c0v")

[node name="Highlight" type="Sprite2D" parent="WarmGloves"]
position = Vector2(64, 64)
scale = Vector2(3.5, 3.5)
texture = ExtResource("3_0a6ek")

[node name="Label" type="Label" parent="WarmGloves/Highlight"]
offset_left = -29.7143
offset_top = 18.2857
offset_right = 264.286
offset_bottom = 93.2857
scale = Vector2(0.208168, 0.256987)
text = "                   Woolen Gloves: 
          Interacting with items cost 
                  one less warmth"

[node name="Sprite2D" type="Sprite2D" parent="WarmGloves"]
position = Vector2(64, 64)
texture = ExtResource("7_wp3o5")

[node name="Label" type="Label" parent="WarmGloves/Sprite2D"]
offset_left = -120.0
offset_top = 184.0
offset_right = 152.0
offset_bottom = 219.0
scale = Vector2(0.750019, 0.919095)
text = "                       Hugs  your hands"

[node name="SturdyGloves" type="Button" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = 128.0
offset_top = 136.0
offset_right = 256.0
offset_bottom = 264.0
toggle_mode = true
button_group = ExtResource("2_n1c0v")

[node name="Highlight" type="Sprite2D" parent="SturdyGloves"]
position = Vector2(64, 64)
scale = Vector2(3.5, 3.5)
texture = ExtResource("3_0a6ek")

[node name="Label" type="Label" parent="SturdyGloves/Highlight"]
offset_left = -27.4286
offset_top = 18.2857
offset_right = 266.571
offset_bottom = 67.2857
scale = Vector2(0.208168, 0.256987)
text = "                     Sturdy Gloves: 
     You can carry 4 wood at once"

[node name="Sprite2D" type="Sprite2D" parent="SturdyGloves"]
position = Vector2(64, 64)
texture = ExtResource("8_ua4ia")

[node name="Label" type="Label" parent="SturdyGloves/Sprite2D"]
offset_left = -112.0
offset_top = 184.0
offset_right = 160.0
offset_bottom = 219.0
scale = Vector2(0.750019, 0.919095)
text = "                       They're heavy"

[node name="WarmBoots" type="Button" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = 128.0
offset_top = 136.0
offset_right = 256.0
offset_bottom = 264.0
toggle_mode = true
button_group = ExtResource("2_n1c0v")

[node name="Highlight" type="Sprite2D" parent="WarmBoots"]
position = Vector2(64, 64)
scale = Vector2(3.5, 3.5)
texture = ExtResource("3_0a6ek")

[node name="Label" type="Label" parent="WarmBoots/Highlight"]
offset_left = -29.7143
offset_top = 18.2857
offset_right = 279.286
offset_bottom = 119.286
scale = Vector2(0.208168, 0.256987)
text = "                     Woolen Boots: 
            The first step you take after 
              receiving  warmth from a 
              campfire  costs 0 warmth."

[node name="Sprite2D" type="Sprite2D" parent="WarmBoots"]
position = Vector2(64, 64)
texture = ExtResource("10_kjk1s")

[node name="Label2" type="Label" parent="WarmBoots/Sprite2D"]
offset_left = -104.0
offset_top = 184.0
offset_right = 168.0
offset_bottom = 219.0
scale = Vector2(0.750019, 0.919095)
text = "                       Let it linger"

[node name="SpikyBoots" type="Button" parent="."]
visible = false
z_index = 1
layout_mode = 0
offset_left = 896.0
offset_top = 128.0
offset_right = 1024.0
offset_bottom = 256.0
toggle_mode = true
keep_pressed_outside = true
button_group = ExtResource("2_n1c0v")

[node name="Highlight" type="Sprite2D" parent="SpikyBoots"]
position = Vector2(64, 64)
scale = Vector2(3.5, 3.5)
texture = ExtResource("3_0a6ek")

[node name="Label" type="Label" parent="SpikyBoots/Highlight"]
offset_left = -27.4286
offset_top = 18.2857
offset_right = 266.571
offset_bottom = 67.2857
scale = Vector2(0.208168, 0.256987)
text = "                     Spiky Boots: 
                You cannot trip."

[node name="Sprite2D" type="Sprite2D" parent="SpikyBoots"]
position = Vector2(64, 64)
texture = ExtResource("11_3rw7u")

[node name="Label2" type="Label" parent="SpikyBoots/Sprite2D"]
offset_left = -112.0
offset_top = 184.0
offset_right = 160.0
offset_bottom = 219.0
scale = Vector2(0.750019, 0.919095)
text = "                 Walk with confidence"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 904.0
offset_top = 448.0
offset_right = 1008.0
offset_bottom = 488.0
scale = Vector2(1.38703, 2.16324)
icon = ExtResource("12_v0o07")

[node name="Container1" type="Sprite2D" parent="."]
position = Vector2(192, 256)
scale = Vector2(2.08333, 11.375)
texture = ExtResource("1_gr470")

[node name="Container2" type="Sprite2D" parent="."]
position = Vector2(579, 256)
scale = Vector2(2.08333, 11.375)
texture = ExtResource("1_gr470")

[node name="Container3" type="Sprite2D" parent="."]
position = Vector2(960, 256)
scale = Vector2(2.08333, 11.375)
texture = ExtResource("1_gr470")

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
